@@ -177,8 +177,7 @@ public class SchemaDesignerAPI extends JerseyResource
 
     responseMap.put(SCHEMA_VERSION_PARAM, configSetHelper.getCurrentSchemaVersion(mutableId));
     responseMap.put(
-        "collections",
-        exists ? configSetHelper.listCollectionsForConfig(configSet) : Collections.emptyList());
+        "collections", exists ? configSetHelper.listCollectionsForConfig(configSet) : List.of());
 
     // don't fail if loading sample docs fails
     try {
@@ -692,8 +691,8 @@ public class SchemaDesignerAPI extends JerseyResource
     List<String> langs;
     if (languages != null) {
       langs =
-          languages.isEmpty() || (languages.size() == 1 && "*".equals(languages.get(0)))
-              ? Collections.emptyList()
+          languages.isEmpty() || (languages.size() == 1 && "*".equals(languages.getFirst()))
+              ? List.of()
               : languages;
       if (!langs.equals(settings.getLanguages())) {
         settings.setLanguages(langs);
@@ -922,7 +921,7 @@ public class SchemaDesignerAPI extends JerseyResource
     // collect the fields to add ... adding all fields at once is faster than one-at-a-time
     List<SchemaField> fieldsToAdd = new ArrayList<>();
     for (String field : docs.keySet()) {
-      List<Object> sampleValues = docs.getOrDefault(field, Collections.emptyList());
+      List<Object> sampleValues = docs.getOrDefault(field, List.of());
 
       // Collapse all whitespace in fields to a single underscore
       String normalizedField = field.trim().replaceAll("\\s+", "_");
