@@ -161,7 +161,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, true,
             ENABLE_FIELD_GUESSING_PARAM, true,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList());
+            LANGUAGES_PARAM, List.of());
     assertDesignerSettings(expSettings, response.unknownProperties());
     int schemaVersion = (Integer) response.unknownProperties().get(SCHEMA_VERSION_PARAM);
     assertEquals(schemaVersion, -1); // shouldn't exist yet
@@ -302,7 +302,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, true,
             ENABLE_FIELD_GUESSING_PARAM, true,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList(),
+            LANGUAGES_PARAM, List.of(),
             COPY_FROM_PARAM, "_default");
     assertDesignerSettings(expSettings, response.unknownProperties());
 
@@ -416,7 +416,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, false,
             ENABLE_FIELD_GUESSING_PARAM, false,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList(),
+            LANGUAGES_PARAM, List.of(),
             COPY_FROM_PARAM, "_default");
     assertDesignerSettings(expSettings, response.unknownProperties());
 
